--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Eurostar</title>
     <link rel="stylesheet" href="css/style.css">
-    <link href="#">
+    <link href="https://fonts.googleapis.com/css?family=Be+Vietnam&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -50,6 +50,7 @@
 </main>
 
 <footer>
+<img src="images/ams_ed_.png">
 </footer>
 
 </body>
