--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
 </header>
 
 <main>
+   <div id="banner">
     <h1>GA VERDER WAAR JE GEBLEVEN WAS: PARANOIA</h1>
+    </div> 
     <section>
         <h2>Alle verhalen</h2>
         <article>
@@ -44,6 +46,12 @@
             <img src="images/plop.jpg">
             <h3>Kabouter Plop is boos</h3>
             <p>Kabouter Plop heeft te horen gekregen dat de TROS zijn programma niet meer wil uitzenden omdat het Commissariaat voor de Media te strenge eisen stelt. Samen met Kabouter Klus besluit hij om naar hun bazen te gaan, Samson en Gert. Die weten altijd wel raad. En dat blijkt!</p>
+            <button>Lees verder</button>
+        </article>
+        <article>
+            <img src="images/bier.jpg">
+            <h3>Verassing</h3>
+            <p>- ‘Biertje dan maar?’ – ‘Graag.’ – ‘Vermoeiende dag?’ – ‘Nah. Naar de bilbiotheek geweest. Met de bus.’ – ‘Gaat daar een bus naartoe?’ – ‘De bus stopt op het stationsplein.’ – ‘Ah. En vandaar moet je lopen?’ – ‘Ja, ik was met mijn zoon. Die sliep in zijn kinderwagen.’ – ‘Goed zo. Lekker wandelweer?’ […]</p>
             <button>Lees verder</button>
         </article>
     </section>
