Added register & favorites pages

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 <header>
     <nav>
         <ul id="account">
-            <li><a href="#">Favorieten</a></li>
-            <li><a href="#">Mijn account</a></li>
+            <li><a href="favorieten.html">Favorieten</a></li>
+            <li><a href="registreren.html">Mijn account</a></li>
         </ul>
        <a href="#"><img src="images/logo.svg"></a>
         <ul>
-            <li><a href="#">Alle verhalen</a></li>
+            <li><a href="index.html">Alle verhalen</a></li>
             <li><a href="#">Populair</a></li>
             <li><a href="#">Nieuw</a></li>
         </ul>
@@ -27,7 +27,7 @@
 <main>
    <div id="banner">
     <h1>GA VERDER WAAR JE GEBLEVEN WAS: PARANOIA</h1>
-    </div> 
+    </div>
     <section>
         <h2>Alle verhalen</h2>
         <article>
