Nothing changed but GitHub thinks I did

--- a/registreren.html
+++ b/registreren.html
@@ -18,7 +18,7 @@
           </ul>
          <a href="#"><img src="images/logo.svg"></a>
           <ul>
-              <li><a href="#">Alle verhalen</a></li>
+              <li><a href="index.html">Alle verhalen</a></li>
               <li><a href="#">Populair</a></li>
               <li><a href="#">Nieuw</a></li>
           </ul>
@@ -39,9 +39,11 @@
       <legend>Account</legend>
       <label for="email">E-Mail</label><input type="email" required>
       <label for="password">Wachtwoord</label><input type="password" required>
-      <label for="password">Herhaal Wachtwoord</label> <input type="password" required>
+      <label for="password">Herhaal wachtwoord</label> <input type="password" required>
       <input type="submit" value="Registreren">
     </fieldset>
+
+    <!-- https://www.w3schools.com/howto/howto_css_signup_form.asp -->
 
   </form>
 </body>
