changes to styling register page

--- a/registreren.html
+++ b/registreren.html
@@ -33,11 +33,11 @@
       <label for="name">Voornaam</label><input type="text" required>
       <label for="name">Achternaam</label><input type="text" required>
       <label for="date">Geboortedatum</label><input type="date" required>
-      <label for="tel">Telefoon</label><input type="tel" minLength="10" maxlength="10" required>
+      <label for="tel">Telefoonnummer</label><input type="tel" minLength="10" maxlength="10" required>
     </fieldset>
     <fieldset>
-      <legend>Account</legend>
-      <label for="email">E-Mail</label><input type="email" required>
+      <legend>Accountgegevens</legend>
+      <label for="email">E-mail</label><input type="email" required>
       <label for="password">Wachtwoord</label><input type="password" required>
       <label for="password">Herhaal wachtwoord</label> <input type="password" required>
       <input type="submit" value="Registreren">
