changed some styling, didn’t get js to work 😔

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <header>
     <nav>
+    
         <ul id="account">
             <li><a href="favorieten.html">Favorieten</a></li>
             <li><a href="registreren.html">Mijn account</a></li>
@@ -27,13 +28,19 @@
 <main>
    <div id="banner">
     <h1>GA VERDER WAAR JE GEBLEVEN WAS: PARANOIA</h1>
+        <button><img src="images/search.svg" alt="search-button"></button>
     </div>
+        <form action="#">
+            <input type="search" placeholder="Zoek in verhalen">
+            <input type="submit" value="search">
+        </form>
+
     <section>
         <h2>Alle verhalen</h2>
         <article>
             <img src="images/paranoia.jpg">
             <h3>Paranoia</h3>
-            <p>Ik sluip de bus uit. Kop in de kraag. Ik maak me klein en duw m’n zoon vooruit. Hij slaapt. Eindelijk. Zijn gejengel trok veel te veel aandacht. De mensen lopen over het stationsplein. Het voelt alsof er een grote, knipperende pijl boven m’n hoofd hangt: HIER LOOPT HIJ! Gelukkig is het kloteweer en kijken […]</p>
+            <p>Ik sluip de bus uit. Kop in de kraag. Ik maak me klein en duw m’n zoon vooruit. Hij slaapt. Eindelijk. Zijn gejengel trok veel te veel aandacht. De mensen lopen over het stationsplein. Het voelt alsof er een grote, knipperende pijl boven m’n hoofd hangt: HIER LOOPT HIJ! Gelukkig is het kloteweer en kijken de mensen niet eens mijn kant op, hoewel ze lopen te eikelen […]</p>
             <button>Lees verder</button>
         </article>
         <article>
@@ -45,12 +52,12 @@
         <article>
             <img src="images/plop.jpg">
             <h3>Kabouter Plop is boos</h3>
-            <p>Kabouter Plop heeft te horen gekregen dat de TROS zijn programma niet meer wil uitzenden omdat het Commissariaat voor de Media te strenge eisen stelt. Samen met Kabouter Klus besluit hij om naar hun bazen te gaan, Samson en Gert. Die weten altijd wel raad. En dat blijkt!</p>
+            <p>Kabouter Plop heeft te horen gekregen dat de TROS zijn programma niet meer wil uitzenden omdat het Commissariaat voor de Media te strenge eisen stelt. Samen met Kabouter Klus besluit hij om naar hun bazen te gaan, Samson en Gert. Die weten altijd wel raad. En dat blijkt! Na een pittig [...]</p>
             <button>Lees verder</button>
         </article>
         <article>
             <img src="images/bier.jpg">
-            <h3>Verassing</h3>
+            <h3>Verrassing</h3>
             <p>- ‘Biertje dan maar?’ – ‘Graag.’ – ‘Vermoeiende dag?’ – ‘Nah. Naar de bilbiotheek geweest. Met de bus.’ – ‘Gaat daar een bus naartoe?’ – ‘De bus stopt op het stationsplein.’ – ‘Ah. En vandaar moet je lopen?’ – ‘Ja, ik was met mijn zoon. Die sliep in zijn kinderwagen.’ – ‘Goed zo. Lekker wandelweer?’ […]</p>
             <button>Lees verder</button>
         </article>
