changed img added search

--- a/registreren.html
+++ b/registreren.html
@@ -30,7 +30,9 @@
   <form action="index.html">
     <fieldset>
       <legend>Gegevens</legend>
-      <label for="name">Voornaam</label><input type="text" required>
+      <label for="name">Voornaam
+          <input type="text" id="name" required>
+      </label>
       <label for="name">Achternaam</label><input type="text" required>
       <label for="date">Geboortedatum</label><input type="date" required>
       <label for="tel">Telefoonnummer</label><input type="tel" minLength="10" maxlength="10" required>
