Implemented search bar

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Be+Vietnam&display=swap" rel="stylesheet">
 </head>
 <body>
+
 <header>
     <nav>
         <ul id="account">
@@ -22,9 +23,16 @@
         </ul>
     </nav>
 </header>
+
 <main>
    <div id="banner">
     <h1>GA VERDER WAAR JE GEBLEVEN WAS: PARANOIA</h1>
+    <div id="wrap">
+      <form action="" autocomplete="on">
+      <input id="search" name="search" type="text" placeholder="Zoek verhaal"><input id="search_submit" value="Rechercher" type="submit">
+      <div class="test" style="width:50px;height:50px;"></div>
+      </form>
+    </div>
     </div>
     <section>
         <h2>Alle verhalen</h2>
