Changes to content and styling

--- a/favorieten.html
+++ b/favorieten.html
@@ -15,7 +15,7 @@
             <li><a href="#">Favorieten</a></li>
             <li><a href="registreren.html">Mijn account</a></li>
         </ul>
-       <a href="#"><img src="images/logo.svg"></a>
+       <a href="index.html"><img src="images/logo.svg"></a>
         <ul>
             <li><a href="index.html">Alle verhalen</a></li>
             <li><a href="#">Populair</a></li>
@@ -23,4 +23,5 @@
         </ul>
     </nav>
 </header>
+
 </body>
