Changed favorieten link

--- a/registreren.html
+++ b/registreren.html
@@ -11,7 +11,7 @@
   <header>
       <nav>
           <ul id="account">
-              <li><a href="favorieten.html">Favorieten</a></li>
+              <li><a href="#">Favorieten</a></li>
               <li><a href="registreren.html">Mijn account</a></li>
           </ul>
          <a href="index.html"><img src="images/logo.svg"></a>
